frontend/src/pages/Profile/profile.scss
.profile {
  background-color: black;
  font-family: monospace;
  font-size: 16px;
  min-height: fit-content;

  .image {
    position: relative;
    width: 100%;
    height: 400px;

    z-index: 1;
    background-image: url('pexels-postiglioni-421129.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

  }

  .profile-avatar {
    position: absolute;
    padding: 0;
    width: 150px;
    height: 150px;


    clip-path: circle(50% at 50% 50%);
    top: 45px;


    .ava {
      width: 150px;
      height: 150px;

    }

    .cam:hover {
      transform: scale(1.1);
    }
  }

  .profile-username {
    // background-color: #d9d9d988;
    position: absolute;
    color: var(--text-color);
    font-family: var(--code-font);
    font-size: 50px;

    margin-top: 70px;
  }

  .social {
    display: flex;
    gap: 15px;
    margin-top: 170px;
  }

  .social img {
    cursor: pointer;
    transition: transform 0.2s;
  }

  .social img:hover {
    transform: scale(1.1);
  }

  .box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: absolute;
    width: 100%;
    max-width: 900px;
    height: 100px;
    margin: 0 auto;
    z-index: 2;
    background: #d9d9d9df;
    border-radius: 50px;
    box-shadow: 3px 8px 25px -1px rgba(253, 253, 253, 0.63);
    -webkit-box-shadow: 3px 8px 25px -1px rgba(255, 255, 255, 0.63);
    -moz-box-shadow: 3px 8px 25px -1px rgba(249, 249, 249, 0.63);
    backdrop-filter: blur(9px);
    -webkit-backdrop-filter: blur(9px);
    border: 1px solid rgba(255, 255, 255, 0.45);
  }

  .box-item {
    text-align: center;
    flex: 1;
  }

  .number {
    display: block;
    font-weight: bold;
    font-size: 1.8em;
    /* Độ lớn của số */
    color: #000;
  }

  .label {
    display: block;
    margin-top: 5px;
    font-size: 1.5em;
    /* Độ lớn của chữ mô tả */
    color: #000;
  }

  .divider {
    width: 1px;
    background-color: #a1a1a1ec;
    /* Màu sắc của line dọc */
    height: 50px;
    /* Chiều cao của line */
  }

  .tabs {
    height: 50px;
    margin: 70px 5px 0 5px;
    border-bottom: 1px solid #d9d9d988;
    display: flex;
    gap: 0px;
    align-items: center;
    z-index: 1;
    justify-content: space-between;

  }

  .tab-container {
    margin-left: 10%;
    min-width: min(400px, 20%);
    display: flex;
    justify-content: space-between;
  }

  .tabs button {
    left: 0;
    height: 100%;
    background-color: rgb(0, 0, 0);
    color: beige;
    text-align: center;
    border: none;
    cursor: pointer;
    font-size: 30px;
    z-index: 2;
    transition: all 0.3s ease;
  }

  .p:hover,
  .i:hover,
  .v:hover {
    background-color: rgb(0, 0, 0);

    color: var(--highlight-red);
  }

  .main {
    position: relative;
    background-color: rgb(0, 0, 0);
    display: inline-grid;
    grid-template-columns: 30% 1fr;
    gap: 15px;
    margin: 0 8%;
    grid-template-rows: 1fr;
    padding-top: 15px;
    padding-bottom: 10px;

  }

  .bio {

    background-color: var(--primary-color);

    margin-left: 20px;
    padding: 10px;
    border-radius: 8px;
    max-height: 500px;


  }

  .about {

    background-color: var(--primary-color);
    margin-right: 20px;
    padding: 10px;
    border-radius: 8px;

  }

  .im {
    background-color: var(--primary-color);
    margin-left: 20px;
    padding: 10px;
    border-radius: 8px;
    height: 500px;


  }

  .Post {
    background-color: var(--primary-color);
    margin-right: 20px;
    padding: 10px;
    border-radius: 8px;
  }

  // .main2 {
  //   position: relative;
  //   background-color: rgb(45, 43, 43);
  //   margin: 0;
  //   height: 400px;
  // }

  // .post {
  //   background-color: black;
  //   height: 200px;
  //   margin-left: 10px;
  //   margin-right: 10px;
  //   padding: 10px;
  //   border-radius: 20px;
  // }

  .text {
    color: black;
  }

  .text span {
    display: block;
    font-size: 24px;
  }

  .text span:first-child {
    font-size: 36px;
    font-weight: bold;
  }

  .text:not(:last-child) {
    border-right: 2px solid #000;
    padding-right: 100px;
  }

  .input {
    border: 1px solid rgb(255, 255, 255);
    padding: 1rem;

    background: #000000;
    height: 40px;
    transition: 0.3s;
  }

  .input:focus {

    background: #161616;
    color: #ccc;
    transition: 0.3s;
  }

  .flex-container {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;

    margin: 20px auto;
  }

  .flex-item {
    width: 100px;
    height: 100px;
    background-color: #ffffff;
    color: rgb(0, 0, 0);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    font-size: 18px;
    font-weight: bold;
  }

  .posts-container {
    display: flex;
    flex-direction: column;
    gap: 30px;
    justify-content: flex-start;
    padding: 20px;
    width: 100%;
  }


  .post-card {
    background-color: var(--box-color);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    border: 1px solid rgb(49, 49, 49);
    box-shadow: 0 4px 8px rgba(152, 152, 152, 0.1);
    border-radius: 10px;
    padding: 10px;
    transition: transform 0.2s, box-shadow 0.2s;
  }

  .post-card:hover {
    transform: translateY(-5px);
    background-color: #131313;
    box-shadow: 0 8px 16px rgba(187, 187, 187, 0.2);
  }

  /* Icon */

  .post-icon-title {
    display: flex;
    align-items: center;
  }

  .post-icon {

    margin-right: 20px;
  }

  /* Title */
  .post-title {
    margin-left: 10px;
    font-size: 20px;
    font-weight: bold;
    color: #ffffff;
  }

  .post-title:hover {
    font-weight: bold;
    text-decoration: underline;
  }

  .bb {
    background: rgba(194, 179, 179, 0.4);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5.7px);
    -webkit-backdrop-filter: blur(11.7px);
    border: 1px solid rgba(0, 0, 0, 1);
    width: 200px;
  }

  button.b {
    background-color: #3b3b3b;
    color: #fffefe;
    padding: 10px;
    backdrop-filter: blur(11.7px);
    width: 90%;
    font-size: 15px;
  }

  .b:hover {
    background-color: rgb(35, 35, 35);
  }

  .plusButton {
    /* Config start */
    --plus_sideLength: 2.5rem;
    --plus_topRightTriangleSideLength: 0.9rem;
    /* Config end */
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid white;
    width: var(--plus_sideLength);
    height: var(--plus_sideLength);
    background-color: #000000;
    overflow: hidden;
  }

  .plusButton::before {
    position: absolute;
    content: "";
    top: 0;
    right: 0;
    width: 0;
    height: 0;
    border-width: 0 var(--plus_topRightTriangleSideLength) var(--plus_topRightTriangleSideLength) 0;
    border-style: solid;
    border-color: transparent white transparent transparent;
    transition-timing-function: ease-in-out;
    transition-duration: 0.2s;
  }

  .plusButton:hover {
    cursor: pointer;
  }

  .plusButton:hover::before {
    --plus_topRightTriangleSideLength: calc(var(--plus_sideLength) * 2);
  }

  .plusButton:focus-visible::before {
    --plus_topRightTriangleSideLength: calc(var(--plus_sideLength) * 2);
  }

  .plusButton>.plusIcon {
    fill: white;
    width: calc(var(--plus_sideLength) * 0.7);
    height: calc(var(--plus_sideLength) * 0.7);
    z-index: 1;
    transition-timing-function: ease-in-out;
    transition-duration: 0.2s;
  }

  .plusButton:hover>.plusIcon {
    fill: black;
    transform: rotate(180deg);
  }

  .plusButton:focus-visible>.plusIcon {
    fill: black;
    transform: rotate(180deg);
  }

  .editbut {
    background-color: var(--box-color);
    padding: 10px;
    min-width: 50%;

    margin: 0 auto;
    margin-bottom: 10px;
    display: flex;
    /* Kích hoạt flexbox */
    justify-content: center;
    /* Căn giữa theo chiều ngang */
    align-items: center;
    /* Căn giữa theo chiều dọc */
    text-align: center;
    /* Căn giữa văn bản (nếu cần) */
    border-radius: 10px;
  }

  .editbut:hover {
    background-color: #131313;
    transition: 0.3s;
  }

  .mainS {
    margin: 0 10%;
  }

  .spost {
    display: flex;
    flex-direction: column;
    gap: 20px;

    .post-card {
      background-color: var(--box-color);
    }

    .post-card:hover {
      transform: translateY(-5px);
      background-color: #131313;
      box-shadow: 0 8px 16px rgba(187, 187, 187, 0.2);
    }
  }

  button.active {
    color: var(--highlight-red);
    /* Khi được chọn thì đổi thành màu đỏ */
  }

  button:not(.active) {
    color: white;
    /* Những nút không được chọn */
  }

  .but {
    color: #000;
  }

  .detail {
    background: rgba(88, 88, 88, 0.64);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(15.3px);
    -webkit-backdrop-filter: blur(15.3px);
    border: 1px solid rgba(88, 62, 62, 0.43);

  }

}

